--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.6.RELEASE</version>
+		<version>2.1.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>org.gps.tcp</groupId>
-	<artifactId>gps-tcp-server</artifactId>
+	<groupId>org.tcp</groupId>
+	<artifactId>tcp-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>GPS tcp server module</name>
-	<description>TCP demo app</description>
+	<name>tcp-server</name>
+	<description>TCP server app</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -22,6 +22,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		
+		<!-- lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
 		</dependency>
 
 		<dependency>
